[tool.poetry]
name = "python-authorizenet"
version = "0.3.0"
description = "A typed Authorize.Net client using httpx and pydantic."
authors = ["Michael Lavers <kolanos@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12"
]
keywords = [ "authorizenet", "authorize.net", "payment", "ecommerce" ]
include = ["LICENSE"]
exclude = ["tests"]
repository = "https://github.com/paypossible/python-authorizenet"
packages = [
    { include = "authorizenet" },
]

[project]
name = "python-authorizenet"
dependencies = [
    "httpx[http2]>=0",
	"xsdata-pydantic[lxml]>=24",
]
requires-python = ">=3.9"

[tool.poetry.dependencies]
python = ">=3.9, <4"
httpx = {extras = ["http2"], version = ">=0"}
xsdata-pydantic = {extras = ["lxml"], version = ">=24"}

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
pytest-httpx = "^0.35.0"
mypy = {version = ">=1.20,<2", markers = "python_version >= \"3.10\""}
pydantic = {version = ">=2,<3", markers = "python_version >= \"3.10\"", extras = ["mypy"]}
flake8 = "^7.3.0"
pytest-xdist = "^3.8.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_uninitialized = false

[[tool.mypy.overrides]]
module = "authorizenet.schema"
ignore_errors = true
